Add the model of Transformer and LSTM including training and backtesting code

--- a/src/dataset_generation.ipynb
+++ b/src/dataset_generation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from qlib.config import REG_CN\n",
-    "from qlib.contrib.data.handler import Alpha158"
+    "from qlib.contrib.data.handler import Alpha158\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -40,20 +41,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[16088:MainThread](2023-05-17 12:43:29,989) INFO - qlib.Initialization - [config.py:416] - default_conf: client.\n",
-      "[16088:MainThread](2023-05-17 12:43:30,388) INFO - qlib.Initialization - [__init__.py:74] - qlib successfully initialized based on client settings.\n",
-      "[16088:MainThread](2023-05-17 12:43:30,388) INFO - qlib.Initialization - [__init__.py:76] - data_path={'__DEFAULT_FREQ': WindowsPath('D:/文件/研一下/深度学习/Quantitative Investment Based on Transformer/data/dataset_qlib')}\n",
-      "[16088:MainThread](2023-05-17 12:43:58,342) INFO - qlib.timer - [log.py:128] - Time cost: 27.952s | Loading data Done\n",
-      "[16088:MainThread](2023-05-17 12:43:58,537) INFO - qlib.timer - [log.py:128] - Time cost: 0.159s | DropnaLabel Done\n",
+      "[16904:MainThread](2023-05-23 18:18:50,728) INFO - qlib.Initialization - [config.py:416] - default_conf: client.\n",
+      "[16904:MainThread](2023-05-23 18:18:51,328) INFO - qlib.Initialization - [__init__.py:74] - qlib successfully initialized based on client settings.\n",
+      "[16904:MainThread](2023-05-23 18:18:51,328) INFO - qlib.Initialization - [__init__.py:76] - data_path={'__DEFAULT_FREQ': WindowsPath('D:/文件/研一下/深度学习/Quantitative Investment Based on Transformer/data/dataset_qlib')}\n",
+      "[16904:MainThread](2023-05-23 18:19:37,058) INFO - qlib.timer - [log.py:128] - Time cost: 45.727s | Loading data Done\n",
+      "[16904:MainThread](2023-05-23 18:19:37,298) INFO - qlib.timer - [log.py:128] - Time cost: 0.193s | DropnaLabel Done\n",
       "d:\\Download_app\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3191: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self[k1] = value[k2]\n",
-      "[16088:MainThread](2023-05-17 12:44:01,200) INFO - qlib.timer - [log.py:128] - Time cost: 2.663s | CSZScoreNorm Done\n",
-      "[16088:MainThread](2023-05-17 12:44:01,207) INFO - qlib.timer - [log.py:128] - Time cost: 2.865s | fit & process data Done\n",
-      "[16088:MainThread](2023-05-17 12:44:01,207) INFO - qlib.timer - [log.py:128] - Time cost: 30.818s | Init data Done\n"
+      "[16904:MainThread](2023-05-23 18:19:40,774) INFO - qlib.timer - [log.py:128] - Time cost: 3.476s | CSZScoreNorm Done\n",
+      "[16904:MainThread](2023-05-23 18:19:40,781) INFO - qlib.timer - [log.py:128] - Time cost: 3.722s | fit & process data Done\n",
+      "[16904:MainThread](2023-05-23 18:19:40,783) INFO - qlib.timer - [log.py:128] - Time cost: 49.452s | Init data Done\n"
      ]
     }
    ],
@@ -120,7 +121,7 @@
     "target_return_span = 1\n",
     "target = f\"return+{target_return_span}\"\n",
     "time_span = 20\n",
-    "CSI_date = ['20100101', '20141230', '20150101', '20161231',  '20170101', '20211231'] "
+    "CSI_date = ['20100101', '20171230', '20180101', '20191231',  '20200101', '20211231'] "
    ]
   },
   {
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,8 @@
     "        stock_ret = []\n",
     "        stock_price = []\n",
     "        for i in range(time_span, feat.shape[0]):\n",
-    "            stock_feat.append(feat[i-time_span : i])\n",
+    "            feat_standard = MinMaxScaler().fit_transform(feat[i-time_span : i]) # Standardization to (0, 1)\n",
+    "            stock_feat.append(feat_standard)\n",
     "            stock_ret.append(ret[i])\n",
     "            stock_price.append(price[i])\n",
     "        stock_feat = np.array(stock_feat)\n",
@@ -216,6 +218,26 @@
     "dataset_feat_train, dataset_ret_train = df_2_array(train_df, alpha158, target, \"train\")\n",
     "dataset_feat_eval,  dataset_ret_eval  = df_2_array(eval_df,  alpha158, target, \"eval\")\n",
     "dataset_feat_test,  dataset_ret_test  = df_2_array(test_df,  alpha158, target, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1865, 20, 100, 143), (465, 20, 100, 143), (466, 20, 100, 143))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_feat_train.shape, dataset_feat_eval.shape, dataset_feat_test.shape"
    ]
   }
  ],
