--- a/src/dataset_generation.ipynb
+++ b/src/dataset_generation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,20 +41,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[16904:MainThread](2023-05-23 18:18:50,728) INFO - qlib.Initialization - [config.py:416] - default_conf: client.\n",
-      "[16904:MainThread](2023-05-23 18:18:51,328) INFO - qlib.Initialization - [__init__.py:74] - qlib successfully initialized based on client settings.\n",
-      "[16904:MainThread](2023-05-23 18:18:51,328) INFO - qlib.Initialization - [__init__.py:76] - data_path={'__DEFAULT_FREQ': WindowsPath('D:/文件/研一下/深度学习/Quantitative Investment Based on Transformer/data/dataset_qlib')}\n",
-      "[16904:MainThread](2023-05-23 18:19:37,058) INFO - qlib.timer - [log.py:128] - Time cost: 45.727s | Loading data Done\n",
-      "[16904:MainThread](2023-05-23 18:19:37,298) INFO - qlib.timer - [log.py:128] - Time cost: 0.193s | DropnaLabel Done\n",
+      "[30412:MainThread](2023-06-05 16:53:35,849) INFO - qlib.Initialization - [config.py:416] - default_conf: client.\n",
+      "[30412:MainThread](2023-06-05 16:53:36,303) INFO - qlib.Initialization - [__init__.py:74] - qlib successfully initialized based on client settings.\n",
+      "[30412:MainThread](2023-06-05 16:53:36,304) INFO - qlib.Initialization - [__init__.py:76] - data_path={'__DEFAULT_FREQ': WindowsPath('D:/文件/研一下/深度学习/Quantitative Investment Based on Transformer/data/dataset_qlib')}\n",
+      "[30412:MainThread](2023-06-05 16:54:09,208) INFO - qlib.timer - [log.py:128] - Time cost: 32.904s | Loading data Done\n",
+      "[30412:MainThread](2023-06-05 16:54:09,418) INFO - qlib.timer - [log.py:128] - Time cost: 0.170s | DropnaLabel Done\n",
       "d:\\Download_app\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3191: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self[k1] = value[k2]\n",
-      "[16904:MainThread](2023-05-23 18:19:40,774) INFO - qlib.timer - [log.py:128] - Time cost: 3.476s | CSZScoreNorm Done\n",
-      "[16904:MainThread](2023-05-23 18:19:40,781) INFO - qlib.timer - [log.py:128] - Time cost: 3.722s | fit & process data Done\n",
-      "[16904:MainThread](2023-05-23 18:19:40,783) INFO - qlib.timer - [log.py:128] - Time cost: 49.452s | Init data Done\n"
+      "[30412:MainThread](2023-06-05 16:54:12,843) INFO - qlib.timer - [log.py:128] - Time cost: 3.424s | CSZScoreNorm Done\n",
+      "[30412:MainThread](2023-06-05 16:54:12,850) INFO - qlib.timer - [log.py:128] - Time cost: 3.641s | fit & process data Done\n",
+      "[30412:MainThread](2023-06-05 16:54:12,851) INFO - qlib.timer - [log.py:128] - Time cost: 36.547s | Init data Done\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
     "for tic_path in os.listdir(\"../data/dataset_per_stocks/\"):\n",
     "    tic_df = pd.read_csv(f\"../data/dataset_per_stocks/{tic_path}\", index_col=0)[[\"date\", \"open\", \"close\", \"high\", \"low\", \"volume\"]]\n",
     "    tic_df[\"tic\"] = tic_path[:8]\n",
-    "    tic_df[target] = tic_df.close.pct_change(target_return_span).shift(-1 * target_return_span)\n",
+    "    tic_df[target] = tic_df.close.pct_change(target_return_span).shift(-1 * target_return_span - 1)\n",
     "    tic_df_list.append(tic_df)\n",
     "\n",
     "tic_target_df = pd.concat(tic_df_list).sort_values(by=\"date\").dropna()\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "((1865, 20, 100, 143), (465, 20, 100, 143), (466, 20, 100, 143))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
